<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Research</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="tv_create_ads_pictures">Upload Foto</string>
    <string name="et_create_ads_title">Judul Iklan</string>
    <string name="et_create_ads_price">Harga (Rp.)</string>
    <string name="cb_create_ads_negootiable">Nego</string>
    <string name="tv_create_ads_description">Deskripsi</string>
    <string name="btn_create_ads_cancel">BATAL</string>
    <string name="btn_create_ads_continue">LANJUTKAN</string>
    <string name="spinner_create_ads_categories_prompt">Pilih Kategori</string>
    <string name="spinner_create_ads_subcategories_prompt">Pilih Sub Kategori</string>
    <string name="spinner_create_ads_subcategories_2_prompt">Pilih Sub Kategori</string>
    <string name="spinner_create_ads_types_prompt">Pilih Sub Kategori</string>
    <string name="spinner_create_ads_conditions_prompt">Pilih Sub Kategori</string>
    <string name="spinner_create_ads_regions_prompt">Propinsi</string>
    <string name="tv_create_ads_loading_cities">Loading&#133;</string>
    <string name="title_activity_create_ads">Create Ads</string>
    <string name="tv_create_ads_login">SILAKAN LOGIN</string>
    <string name="btn_create_ads_login">Member Login</string>
    <string name="tv_not_a_member_1">BELUM JADI MEMBER ?</string>
    <string name="tv_not_a_member_2">Silakan lengkapi form di bawah ini :</string>
    <string name="et_create_ads_create_user_name">Nama Pengguna</string>
    <string name="et_create_ads_create_user_email">Email</string>
    <string name="et_create_ads_create_user_phone">Nomor Telp/HP</string>
    <string name="cb_create_ads_create_user_agreement">Saya telah membaca dan menerima semua persyaratan dan ketentuan Tokobagus.com</string>
    <string name="btn_create_ads_login_back">KEMBALI</string>
    <string name="btn_create_ads_login_continue">LANJUTKAN</string>
    <string name="tv_create_ads_promopoint_1">"PROMOPOINT SAAT INI : "</string>
    <string name="tv_create_ads_promopoint_2">Gunakan Promopoint untuk mempromosikan iklan anda.</string>
    <string name="tv_create_ads_promopoint_toplisting">Top Listing</string>
    <string name="tv_create_ads_promopoint_yellowbackground">Latar Belakang Kuning</string>
    <string name="tv_create_ads_promopoint_boldtitle">Judul Huruf Tebal</string>
    <string name="tv_create_ads_promopoint_hotitems">Hot Items</string>
    <string name="tv_create_ads_promopoint_websitelink">Hubungan Antar Website</string>
    <string name="et_create_ads_promopoint_website_address">Masukkan Alamat Website di Sini</string>
    <string name="cb_create_ads_promopoint_agreement">Saya telah membaca dan menerima semua persyaratan dan ketentuan Tokobagus.com</string>
    <string name="btn_create_ads_promopoint_back">KEMBALI</string>
    <string name="btn_create_ads_promopoint_continue">PASANG IKLAN</string>

</resources>