<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView1"
        style="@style/CreateAdsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_create_ads_login"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080" />

    <Button
        android:id="@+id/btn_create_ads_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_menu_profile"
        android:text="@string/btn_create_ads_login"
        android:textAppearance="?android:attr/textAppearanceSmallInverse" />

    <TextView
        android:id="@+id/textView2"
        style="@style/CreateAdsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_not_a_member_1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080" />

    <TextView
        android:id="@+id/textView3"
        style="@style/CreateAdsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_not_a_member_2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/et_create_ads_create_user_name"
        style="@style/CreateAdsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/et_create_ads_create_user_name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_create_ads_create_user_email"
        style="@style/CreateAdsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/et_create_ads_create_user_email" />

    <EditText
        android:id="@+id/et_create_ads_create_user_phone"
        style="@style/CreateAdsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/et_create_ads_create_user_phone"
        android:inputType="phone" />

    <CheckBox
        android:id="@+id/cb_create_ads_create_user_agreement"
        style="@style/CreateAdsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_create_ads_create_user_agreement"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_create_ads_login_back"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/button_state"
            android:text="@string/btn_create_ads_login_back" />

        <Button
            android:id="@+id/btn_create_ads_login_continue"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/button_state"
            android:text="@string/btn_create_ads_login_continue" />

    </LinearLayout>

</LinearLayout>