<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.example.research"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAdsActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tv_create_ads_pictures"
            style="@style/CreateAdsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_create_ads_pictures"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.example.research.AddPhotoView
            android:id="@+id/addPhotoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:maxColumns="4"
            app:maxItemCount="4"
            app:picturePath="TokoBagus" />

        <!--
             <com.example.research.AddPhotoView
            android:id="@+id/fragmentAddPhoto"
            android:name="com.example.research.AddPhotoFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:maxColumns="4"
            app:maxItemCount="4"
            app:picturePath="TokoBagus" />
        -->

        <EditText
            android:id="@+id/et_create_ads_title"
            style="@style/CreateAdsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/et_create_ads_title" >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <Spinner
                android:id="@+id/spinner_create_ads_types"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner_create_ads_conditions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <EditText
                android:id="@+id/et_create_ads_price"
                style="@style/CreateAdsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/et_create_ads_price"
                android:inputType="number" >
            </EditText>

            <CheckBox
                android:id="@+id/cb_create_ads_negotiable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cb_create_ads_negootiable"
                android:textColor="#808080" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner_create_ads_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <Spinner
            android:id="@+id/spinner_create_ads_subcategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spinner_create_ads_subcategories_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spinner_create_ads_provinces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <Spinner
            android:id="@+id/spinner_create_ads_cities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_create_ads_pictures"
            style="@style/CreateAdsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_create_ads_loading_cities"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_create_ads_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_create_ads_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#808080" />

        <EditText
            android:id="@+id/et_create_ads_description"
            style="@style/CreateAdsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_create_ads_cancel"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_state"
                android:text="@string/btn_create_ads_cancel" />

            <Button
                android:id="@+id/btn_create_ads_continue"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_state"
                android:text="@string/btn_create_ads_continue" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>